--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
 					<ul>
 						<li v-if="cameras.length === 0" class="empty" style="list-style:none;">No cameras found</li>
 						<li v-for="camera in cameras" style="list-style:none;">
-							<span v-if="camera.id == activeCameraId" :title="formatName(camera.name)" class="active">
-                        		<i class="fa fa-camera" style="font-size:50px;"></i>
+							<span v-if="camera.id == activeCameraId" :title="formatName(camera.name)" class="active" hidden="">
+                            	{{ formatName(camera.name) }}
                             </span>
-							<span v-if="camera.id != activeCameraId" :title="formatName(camera.name)" hidden="">
-                            	<a @click.stop="selectCamera(camera)">{{ formatName(camera.name) }}</a>
+							<span v-if="camera.id != activeCameraId" :title="formatName(camera.name)">
+                            	<a @click.stop="selectCamera(camera)">
+                        			<i class="fa fa-camera" style="font-size:50px;"></i>
+                                </a>
                             </span>
 						</li>
 					</ul>
