--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 				<section class="cameras">
 					<ul>
 						<li v-if="cameras.length === 0" class="empty" style="list-style:none;">No cameras found</li>
-						<li v-for="camera in cameras" style="list-style:none;">
                             <a @click.stop="selectCamera(camera)">
                         			<i class="fa fa-camera" style="font-size:70px;"></i>
-							<span v-if="camera.id == activeCameraId" :title="formatName(camera.name)" class="active" hidden="">
+						<li v-for="camera in cameras" style="list-style:none;">
+							<span v-if="camera.id == activeCameraId" :title="formatName(camera.name)" class="active">
                             	{{ formatName(camera.name) }}
                             </span>
-							<span v-if="camera.id != activeCameraId" :title="formatName(camera.name)" hidden="">
+							<span v-if="camera.id != activeCameraId" :title="formatName(camera.name)">
                             	{{ formatName(camera.name) }}
                             </span>
-                        	</a>
 						</li>
+                        	</a>
 					</ul>
 				</section>
         
