--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                 }
             };
             var decoder = $("canvas").WebCodeCamJQuery(arg).data().plugin_WebCodeCamJQuery;
-                decoder.buildSelectMenu(document.createElement('select'), 'environment|back').init(arg).play();
-            /*  decoder.buildSelectMenu("select");
+            decoder.buildSelectMenu("select");
             decoder.play();
-            Without visible select menu
+            /*  Without visible select menu
+                decoder.buildSelectMenu(document.createElement('select'), 'environment|back').init(arg).play();
             */
             $('select').on('change', function(){
                 decoder.stop().play();
