--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </span>
             
             <div class="well" style="position:relative; display:inline-block; margin-top:85px; margin-bottom:0; width:100%;">
-            	<span style="position:absolute; text-align:center; font-size:13px; color:#ffffff; bottom:70px; z-index:5;">
+            	<span style="position:absolute; padding:0 10% 0 10%; text-align:center; font-size:17px; color:#ffffff; bottom:70px; z-index:5;">
             		Sejajarkan kode QR di dalam kotak untuk pemindaian<br/>otomatis.
             	</span>
             
