--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
     
         <a href="http://jdn.id"><img id="bgwifi" src="img/logo.png" style="width:230px; position:absolute; margin-left:20px;"/></a>
         
-        <select title="Choose one of the following..." style="position:absolute; right:20px; margin-top:20px; height:40px; cursor:pointer; font-size:15px;">
-			<optgroup label="---Pilih Kamera---"></optgroup>
+        <select style="position:absolute; right:20px; margin-top:15px; height:40px; cursor:pointer; font-size:15px;">
         </select>
   
 		<span class="blink" style="position:absolute; right:20px; margin-top:64px;">
