--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           		Sejajarkan kode QR<br/>di dalam kotak<br/>untuk pemindaian<br/>otomatis.
           	</span>
           
-        	<canvas id="webcodecam-canvas"></canvas>
+        	<canvas id="webcodecam-canvas" style="width:100%;height:auto;"></canvas>
            
         	<div class="scanner-laser laser-rightBottom blink2"></div>
 			<div class="scanner-laser laser-rightTop blink2"></div>
