--- a/index.html
+++ b/index.html
@@ -82,10 +82,9 @@
             var txt = "innerText" in HTMLElement.prototype ? "innerText" : "textContent";
             var arg = {
                 resultFunction: function(result) {
-					window.location.href = result.code;
-                    /*var aChild = document.createElement('li');
+                    var aChild = document.createElement('li');
                     aChild[txt] = result.format + ': ' + result.code;
-                    document.querySelector('body').appendChild(aChild);*/
+                    document.querySelector('body').appendChild(aChild);
                 }
             };
             var decoder = new WebCodeCamJS("canvas").init(arg);
